--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@
     background: #fff;
 }
 #wrapper{
-	background: url("assets/images/ua-bg.webp");
+	background: url("../../assets/images/ua-bg.webp");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 100% 100%;
